Changing icon targets

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             >
               <!-- Heroicon name: outline/eye -->
               <svg
-                data-password-visibility-target="hiddenIcon"
+                data-password-visibility-target="icon"
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-6 w-6"
                 fill="none"
@@ -169,7 +169,7 @@
 
               <!-- Heroicon name: outline/eye-off -->
               <svg
-                data-password-visibility-target="visibleIcon"
+                data-password-visibility-target="icon"
                 xmlns="http://www.w3.org/2000/svg"
                 class="hidden h-6 w-6"
                 fill="none"
