Upgrading to Stimulus 3 and bump dependencies

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Stimulus Password Visibility</title>
 
     <script type="module" defer>
-      import { Application } from 'stimulus'
+      import { Application } from '@hotwired/stimulus'
       import PasswordVisibility from './src/index'
 
       const application = Application.start()
